fix bug on mobile

--- a/styles/Email.module.css
+++ b/styles/Email.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   min-height: 100vh;
   position: relative;
-  margin-top: -100vh;
+  padding-top: -100vh;
   overflow: hidden;
 }
 
@@ -34,7 +34,7 @@
   display: flex;
   margin-inline: var(--margin);
   flex-direction: column;
-  margin-top: 200px;
+  padding-top: 200px;
 }
 
 .email button {
@@ -144,7 +144,7 @@
     font-size: 28px;
   }
   .email {
-    margin-top: 150px;
+    padding-top: 150px;
   }
   .footer p {
     font-size: 14px;
@@ -165,7 +165,7 @@
     font-size: 24px;
   }
   .email {
-    margin-top: 120px;
+    padding-top: 120px;
   }
   .footer p {
     font-size: 13px;
@@ -174,7 +174,7 @@
 
 @media (max-width: 800px) {
   .container {
-    margin-top: 180px;
+    padding-top: 180px;
   }
   .glow {
     transform: scale(1.5);
@@ -196,7 +196,7 @@
     font-size: 18px;
   }
   .email {
-    margin-top: 60px;
+    padding-top: 60px;
   }
   .footer {
     flex-direction: column;
